# storefront-drf

./: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
core/: admin.py  models.py  paginations.py  serializers.py
core/migrations/: 0001_initial.py
core/signals/: handlers.py
likes/: models.py  serializers.py  views.py
likes/migrations/: 0001_initial.py
locust/: browse_products.py
nginx/: default.conf
orders/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/tests/: conftest.py  test_cart.py  test_cart_items.py  test_carts.py  test_customer_address.py  test_orders.py
playground/: tasks.py  urls.py  views.py
playground/templates/: hello.html
products/: admin.py  exceptions.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
products/migrations/: 0001_initial.py  0002_alter_collection_title.py  0002_alter_productimage_image.py
products/tests/: conftest.py  test_collections.py  test_product_images.py  test_product_likes.py  test_product_review_vote.py  test_product_review_votes.py  test_product_reviews.py  (+2 more)
sql/: reverse_seed_store.sql  seed_products.sql  seed_store.sql  sequence_reset.sql
store/: admin.py  filters.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  validators.py  views.py
storefront/: __init__.py  celery.py  settings.py  urls.py
tags/: admin.py  models.py
votes/: models.py  serializers.py  views.py
(+30 files in other folders)
