[tool.poetry]
name = "storefront"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
django-filter = "^24.1"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
drf-nested-routers = "^0.93.5"
psycopg = { extras = ["binary"], version = "^3.1.18" }
celery = "^5.3.6"
flower = "^2.0.1"
redis = "^5.0.3"
hiredis = "^2.3.2"
whitenoise = { extras = ["brotli"], version = "^6.6.0" }
pillow = "^10.2.0"
drf-spectacular = "^0.27.1"
django-extensions = "^3.2.3"
django-admin-inline-paginator = "^0.4.0"
file-validator = "^1.0.9"
django-imagekit = "^5.0.0"
django-cleanup = "^8.1.0"
django-phonenumber-field = { extras = ["phonenumbers"], version = "^8.0.0" }

[tool.poetry.group.dev.dependencies]
model-bakery = "^1.17.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-watch = "^4.2.0"
django-debug-toolbar = "^4.3.0"
locust = "^2.24.1"
ruff = "^0.5.5"
coverage = "^7.6.0"
poethepoet = "^0.27.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "storefront.settings.test"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
format = "markdown"

[tool.poe.tasks.coverage]
shell = "coverage run && coverage html"

[tool.poe.tasks."coverage:clean"]
shell = "rm -rf htmlcov/ .coverage "

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
